Latest changes regarding the interaction with CS DB. Added the possibility of configuring file permissions for certain folders in the archive, to be applied once a workspace is submitted.
refs #4319